[package]
name = "ethcore-bytes"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Byte utilities for Parity"
homepage = "https://github.com/paritytech/ethcore-bytes"
repository = "https://github.com/paritytech/ethcore-bytes"
readme = "README.md"
license = "GPL-3.0"

[dependencies]
